--- a/application.yml
+++ b/application.yml
@@ -6,3 +6,13 @@ eureka:
       defaultZone: http://localhost:9002/eureka/
   instance:
     prefer-ip-address: true
+
+microservice:
+  microservicePayment:
+    endpoints:
+      endpoint:
+        uri: http://MICROSERVICEPAYMENT/payment/doPayment
+    microserviceBooking:
+      endpoints:
+        endpoint:
+          uri: http://MICROSERVICEBOOKING/book/bookOrder
